# senior-design

./: README.md
movehead/: .CMakeLists.txt.swp  CMakeLists.txt  angles.txt  cmakelistsOriginalMoveHead  garbageCollector  movehead.cpp  moveheadoLD
movehead/build-myconfig/: CMakeCache.txt  Makefile  cmake_install.cmake  dependencies.cmake
movehead/build-myconfig/sdk/share/qi/: path.conf
movehead/source/: .CMakeLists.txt.swp  .main.cpp.swp  main.cpp
movehead/source/includes/: .Communication.hpp.swp  Communication.hpp  Simulator.hpp  teste.hpp  vRepIncludes.hpp
movehead/source/includes/Exceptions/: VRepException.hpp
movehead/source/src/: Communication.cpp  teste.cpp
movehead/source/src/v_rep/: extApi.c
v-rep-remote-api/: robotino_remote_api.ttt
v-rep-remote-api/source/: CMakeLists.txt  main.cpp
v-rep-remote-api/source/includes/: defines.hpp  teste.hpp
v-rep-remote-api/source/src/: Simulator.cpp
v-rep-remote-api/source/src/v_rep/: extApiPlatform.c
